--- a/code_distance/code_distance.csproj
+++ b/code_distance/code_distance.csproj
@@ -42,6 +42,15 @@
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="bin\Debug\data_test\test1.txt" />
+      <Content Include="bin\Debug\data_test\test2.txt" />
+      <Content Include="data_test\test1.txt" />
+      <Content Include="data_test\test2.txt" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="bin\Debug" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
